[package]
name = "promql-parser"
version = "0.1.0"
authors = ["lijingwei9060 <lijingwei9060@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom ={ version = "7"}
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
humantime = "2.1.0"